<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.icdatofcusgmail.lucidsnacks.Vendors_LoginActivityArchive.Vendor_LoginActivity"
    android:background="@drawable/c_loginactivity">

    <include
        android:id="@+id/ToolbarVendor_LoginActivity"
        layout="@layout/toolbar_vendor_login_activity"
        android:layout_height="65dp"
        android:layout_width="match_parent">
    </include>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/loginactivity_motivationlayoutcolour"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_amazing"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:id="@+id/RandomMotivationForVendor" />

    </LinearLayout>


    <com.alimuzaffar.lib.widgets.AnimatedEditText
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/idNumber"
        android:drawableStart="@drawable/a_username"
        android:drawablePadding="10dp"
        android:width="300dp"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:background="#FFFFFF"
        android:hint="@string/vendor_idnumber"
        app:animationType="fromRight"
        app:animateCursor="true"
        app:animateTextClear="true"
        android:textSize="25sp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="314dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access"
        android:id="@+id/IDbutton"
        android:onClick="IDCinfirmed"
        android:textColor="#FFFFFF"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textSize="20sp"
        android:background="@drawable/roundcornerbutton_loginactivity"
        android:layout_marginBottom="142dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/a_id_confirmed"
        android:id="@+id/clearAllID"
        android:background="#FFFFFF"
        android:contentDescription="@string/confirmID"
        android:layout_alignBottom="@+id/idNumber"
        android:layout_toEndOf="@+id/idNumber"
        android:layout_alignTop="@+id/idNumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_s_name_will_display_here_Vendor_Login_Activity"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/IDWitness"
        android:textColor="#FFFFFF"
        android:layout_marginTop="82dp"
        android:layout_below="@+id/idNumber"
        android:layout_alignStart="@+id/idNumber"
        android:layout_alignEnd="@+id/confirmID" />


</RelativeLayout>
